--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -45,6 +45,15 @@ BARONG_EVENT_API_RABBITMQ_PORT=5672
 BARONG_EVENT_API_RABBITMQ_USERNAME=guest
 BARONG_EVENT_API_RABBITMQ_PASSWORD=guest
 
+BARONG_SMTP_HOST=<%= @config['smtp']['host'] %>
+BARONG_SMTP_PORT=<%= @config['smtp']['port'] %>
+BARONG_SMTP_USER=<%= @config['smtp']['user'] %>
+BARONG_SMTP_PASSWORD=<%= @config['smtp']['password'] %>
+BARONG_DEFAULT_LANGUAGE=en
+
+BARONG_SENDER_NAME=<%= @config['smtp']['sender_name'] %>
+BARONG_SENDER_EMAIL=<%= @config['smtp']['sender_email'] %>
+
 BARONG_CSRF_PROTECTION=<%= @config['csrfEnabled'] %>
 
 BARONG_APP_NAME=<%= @config['app']['name'] %>
