--- a/templates/config/postmaster.yml.erb
+++ b/templates/config/postmaster.yml.erb
@@ -1,9 +1,3 @@
-languages:
-- code: EN
-  name: English
-- code: RU
-  name: Russian
-
 keychain:
   barong:
     algorithm: RS256
@@ -28,23 +22,23 @@ events:
   key: user.email.confirmation.token
   exchange: barong_system
   templates:
-    EN:
+    en:
       subject: Registration Confirmation
-      template_path: templates/en/email_confirmation.tpl
-    RU:
+      template_path: email_confirmation.en.html.erb
+    ru:
       subject: Подтверждение Регистрации
-      template_path: templates/ru/email_confirmation.tpl
+      template_path:email_confirmation.ru.html.erb
 
 - name: Password Reset
   key: user.password.reset.token
   exchange: barong_system
   templates:
-    EN:
+    en:
       subject: Password Reset
-      template_path: templates/en/password_reset.tpl
-    RU:
+      template_path: password_reset.en.html.erb
+    ru:
       subject: Сброс Пароля
-      template_path: templates/ru/password_reset.tpl
+      template_path: password_reset.ru.html.erb
 
 - name: Label Created
   key: label.created
@@ -53,9 +47,9 @@ events:
     record.key in ["phone", "profile", "document"] &&
     record.value in ["verified", "rejected"]
   templates:
-    EN:
+    en:
       subject: Account Details Updated
-      template_path: templates/en/label_created.tpl
+      template_path: label_created.en.html.erb
 
 - name: Label Updated
   key: label.updated
@@ -64,40 +58,40 @@ events:
     record.key in ["phone", "profile", "document"] &&
     record.value in ["verified", "rejected"]
   templates:
-    EN:
+    en:
       subject: Account Details Updated
-      template_path: templates/en/label_created.tpl
+      template_path: label_created.en.html.erb
 
 - name: Deposit Accepted
   key: deposit.updated
   exchange: peatio
   expression: changes.state == "submitted" && record.state == "accepted"
   templates:
-    EN:
+    en:
       subject: Deposit Accepted
-      template_path: templates/en/deposit_accepted.tpl
+      template_path: deposit_accepted.en.html.erb
 
 - name: Session Create
   key: session.create
   exchange: barong_system
   templates:
-    EN:
+    en:
       subject: New Login
-      template_path: templates/en/session_create.tpl
+      template_path: session_create.en.html.erb
 
 - name: Withdrawal Succeed
   key: withdraw.updated
   exchange: peatio
   expression: changes.state in ["errored", "confirming"] && record.state == "succeed"
   templates:
-    EN:
+    en:
       subject: Withdrawal Succeed
-      template_path: templates/en/withdraw_succeed.tpl
+      template_path: withdraw_succeed.en.html.erb
 
 - name: New Beneficiary
   key: beneficiary.created
   exchange: peatio
   templates:
-    EN:
+    en:
       subject: New Beneficiary
-      template_path: templates/en/new_beneficiary.tpl
+      template_path: new_beneficiary.en.html.erb
