--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -8,9 +8,10 @@ RAILS_ENV=production
 
 SECRET_KEY_BASE=64
 
-DATABASE_HOST=db
-DATABASE_USER=root
-DATABASE_PASS=changeme
+DATABASE_HOST=<%= @config['database']['host'] %>
+DATABASE_PORT=<%= @config['database']['port'] %>
+DATABASE_USER=<%= @config['database']['user'] %>
+DATABASE_PASS=<%= @config['database']['password'] %>
 
 BARONG_TWILIO_PHONE_NUMBER=<%= @config['twilio']['phone_number'] %>
 BARONG_TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
@@ -20,6 +21,9 @@ BARONG_STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
 BARONG_STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
 BARONG_STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
 BARONG_STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
+BARONG_STORAGE_ENDPOINT=<%= @config['storage']['endpoint'] %>
+BARONG_STORAGE_SIGNATURE_VERSION=<%= @config['storage']['signatureVersion'] %>
+BARONG_STORAGE_REGION=<%= @config['storage']['region'] %>
 
 BARONG_CAPTCHA=<%= @config['captcha']['type'] %>
 <% if @config['captcha']['type'] == 'recaptcha' %>
