--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -80,6 +80,7 @@ services:
     env_file:
       - ../config/barong.env
     volumes:
+      -  ../config/secrets:/secrets:ro
       -  ../config/postmaster.yml:/home/app/config/mailer.yml
     command: bash -c "bin/mailer run"
 
