Add new configs to env.js

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -24,4 +24,7 @@ window.env = {
     isResizable: false,
     isDraggable: false,
     languages: ['en', 'ru'],
+    sessionCheckInterval: '15000',
+    balancesFetchInterval: '3000',
+    passwordEntropyStep: 14,
 };
