FIX: Add barong password entropy

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -58,6 +58,9 @@ BARONG_DEFAULT_LANGUAGE=en
 BARONG_SENDER_NAME=<%= @config['smtp']['sender_name'] %>
 BARONG_SENDER_EMAIL=<%= @config['smtp']['sender_email'] %>
 
+BARONG_PASSWORD_MIN_ENTROPY=14
+BARONG_PASSWORD_USE_DICTIONARY=false
+
 BARONG_CSRF_PROTECTION=<%= @config['csrfEnabled'] %>
 
 BARONG_APP_NAME=<%= @config['app']['name'] %>
