WIP: Traefik v2 migration

--- a/templates/compose/gateway.yaml.erb
+++ b/templates/compose/gateway.yaml.erb
@@ -8,10 +8,11 @@ services:
       - ../config/gateway:/etc/envoy/
     command: /usr/local/bin/envoy -l info -c /etc/envoy/envoy.yaml
     labels:
-      traefik.enable: true
-      traefik.frontend.rule: "PathPrefix:/api/, /admin, /assets/;Host:<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>"
-      traefik.default.port: 8099
-      traefik.default.protocol: http
-      traefik.wss.frontend.rule: "Host:<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>"
-      traefik.wss.protocol: ws
-      traefik.wss.port: 8099
+      - "traefik.http.routers.gateway.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/api/, /admin, /assets/`)"
+      - "traefik.http.routers.gateway.entrypoints=web"
+      - "traefik.enable=true"
+      - "traefik.default.port=8099"
+      - "traefik.default.protocol=http"
+      - "traefik.wss.routers.gateway.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`)"
+      - "traefik.wss.protocol=ws"
+      - "traefik.wss.port=8099"
