--- a/templates/compose/proxy.yaml.erb
+++ b/templates/compose/proxy.yaml.erb
@@ -3,7 +3,7 @@ version: '3.6'
 services:
   proxy:
     restart: always
-    image: traefik:1.7.6
+    image: traefik:2.1.8
     ports:
       - "80:80"
       - "443:443"
@@ -11,5 +11,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ../config/traefik.toml:/etc/traefik/traefik.toml:ro
       - ../config/acme.json:/acme.json
+    command:
+      - "--log.level=DEBUG"
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
     networks:
       - default
