--- a/templates/compose/components-docs.yaml.erb
+++ b/templates/compose/components-docs.yaml.erb
@@ -6,7 +6,9 @@ services:
     expose:
       - "80"
     labels:
-      traefik.enable: true
-      traefik.frontend.rule: 'PathPrefix: /components, /src;Host: <%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>'
-      traefik.port: 80
-      traefik.frontend.auth.basic: 'ILoveOpenware:$$apr1$$F47ty7.m$$PmAZpvByLBNgxNld4m1B81'
+      - "traefik.http.routers.frontend.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/components, /src`)"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.enable=true"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
+      - "traefik.http.routers.frontend.middlewares=auth"
+      - "traefik.http.middlewares.auth.basicauth.users=ILoveOpenware:$$apr1$$F47ty7.m$$PmAZpvByLBNgxNld4m1B81"
