--- a/templates/compose/superset.yaml.erb
+++ b/templates/compose/superset.yaml.erb
@@ -7,9 +7,10 @@ services:
     volumes:
       - superset_db:/var/lib/superset
     labels:
-      traefik.enable: true
-      traefik.frontend.rule: "Host:superset.<%= @config['app']['domain'] %>"
-      traefik.port: 8088
+      - "traefik.http.routers.superset.rule=Host(`superset.<%= @config['app']['domain'] %>`)"
+      - "traefik.http.services.superset.loqadbalancer.server.port=8088"
+      - "traefik.http.routers.superset.entrypoints=web"
+      - "traefik.enable=true"
 
 volumes:
   superset_db:
