--- a/templates/compose/frontend.yaml.erb
+++ b/templates/compose/frontend.yaml.erb
@@ -7,9 +7,14 @@ services:
     volumes:
       - ../config/frontend/env.js:/usr/share/nginx/html/config/env.js
     labels:
-      traefik.enable: true
-      traefik.frontend.rule: "PathPrefix:/;Host:<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>"
-      traefik.port: 3000
+      - "traefik.http.routers.frontend.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/`)"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.enable=true"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+      <%- if @config['ssl']['enabled'] %>
+      - "traefik.http.routers.frontend.tls=true"
+      - "traefik.http.routers.frontend.tls.certresolver=myresolver"
+      <% end -%>
 
   tower:
     restart: always
@@ -17,7 +22,9 @@ services:
     volumes:
       - ../config/frontend/tower.js:/home/app/env.js
     labels:
-      traefik.enable: true
-      traefik.frontend.rule: "PathPrefix:/tower;Host:<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>"
-      traefik.port: 8080
-
+      - "traefik.http.routers.tower.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/tower`)"
+      - "traefik.http.routers.tower.entrypoints=web"
+      - "traefik.enable=true"
+      - "traefik.http.services.tower.loadbalancer.server.port=8080"
+      - "traefik.http.routers.frontend.tls=true"
+      - "traefik.http.routers.frontend.tls.certresolver=myresolver"
