--- a/templates/config/traefik.toml.erb
+++ b/templates/config/traefik.toml.erb
@@ -1,35 +1,8 @@
-logLevel = "INFO"
-defaultEntryPoints = [<%= '"https",' if @config['ssl']['enabled'] %>"http"]
-
-[api]
-
-[entryPoints]
-  [entryPoints.http]
-  address = ":80"
 <% if @config['ssl']['enabled'] -%>
-    [entryPoints.http.redirect]
-    entryPoint = "https"
-  [entryPoints.https]
-  address = ":443"
-  [entryPoints.https.tls]
-<% end -%>
-
-[retry]
-
-[docker]
-endpoint = "unix:///var/run/docker.sock"
-domain = "local"
-watch = true
-exposedbydefault = false
-
-<% if @config['ssl']['enabled'] -%>
-[acme]
-email = "<%= @config['ssl']['email'] %>"
+[certificatesResolvers.myresolver.acme]
+email = "support@<%= @config['app']['domain'] %>"
 storage = "acme.json"
-entryPoint = "https"
-OnHostRule = true
-usebindportip = true
-
-[acme.httpChallenge]
-entryPoint = "http"
+[certificatesResolvers.myresolver.acme.httpChallenge]
+# used during the challenge
+entryPoint = "web"
 <% end -%>
