--- a/templates/compose/gateway.yaml.erb
+++ b/templates/compose/gateway.yaml.erb
@@ -10,9 +10,11 @@ services:
     labels:
       - "traefik.http.routers.gateway.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/api/, /admin, /assets/`)"
       - "traefik.http.routers.gateway.entrypoints=web"
+      - "traefik.http.services.gateway.loadbalancer.server.port=8099"
       - "traefik.enable=true"
-      - "traefik.default.port=8099"
-      - "traefik.default.protocol=http"
-      - "traefik.wss.routers.gateway.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`)"
-      - "traefik.wss.protocol=ws"
-      - "traefik.wss.port=8099"
+#      - "traefik.enable=true"
+#      - "traefik.default.port=8099"
+#      - "traefik.default.protocol=http"
+#      - "traefik.wss.routers.gateway.rule=Host(`<%#= @config['app']['subdomain'] %>.<%#= @config['app']['domain'] %>`)"
+#      - "traefik.wss.protocol=ws"
+#      - "traefik.wss.port=8099"
