--- a/templates/compose/vendor.yaml.erb
+++ b/templates/compose/vendor.yaml.erb
@@ -15,7 +15,7 @@ services:
         yarn
         yarn start
     labels:
-      - "traefik.http.routers.frontend.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/`)"
-      - "traefik.http.services.frontend.loqadbalancer.server.port=3000"
-      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.routers.frontend-<%= @name %>.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/`)"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+      - "traefik.http.routers.frontend-<%= @name %>.entrypoints=web"
       - "traefik.enable=true"
