--- a/templates/compose/components-docs.yaml.erb
+++ b/templates/compose/components-docs.yaml.erb
@@ -6,9 +6,13 @@ services:
     expose:
       - "80"
     labels:
-      - "traefik.http.routers.frontend.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/components, /src`)"
-      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.routers.components-<%= @name %>.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/components`, `/src`)"
       - "traefik.enable=true"
-      - "traefik.http.services.frontend.loadbalancer.server.port=80"
-      - "traefik.http.routers.frontend.middlewares=auth"
+      - "traefik.http.services.components.loadbalancer.server.port=80"
+      - "traefik.http.routers.components-<%= @name %>.middlewares=auth"
       - "traefik.http.middlewares.auth.basicauth.users=ILoveOpenware:$$apr1$$F47ty7.m$$PmAZpvByLBNgxNld4m1B81"
+      <%- if @config['ssl']['enabled'] -%>
+      - "traefik.http.routers.components-<%= @name %>.entrypoints=websecure"
+      <%- else -%>
+      - "traefik.http.routers.components-<%= @name %>.entrypoints=web"
+      <%- end -%>
