--- a/templates/compose/proxy.yaml.erb
+++ b/templates/compose/proxy.yaml.erb
@@ -9,13 +9,19 @@ services:
       - "443:443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      <%- if @config['ssl']['enabled'] %>
-      - ../config/traefik.toml:/etc/traefik/traefik.toml:ro
+      <%- if @config['ssl']['enabled'] -%>
       - ../config/acme.json:/acme.json
-      <% end -%>
+      <%- end -%>
     command:
       - "--log.level=DEBUG"
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      <%- if @config['ssl']['enabled'] -%>
+      - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.myresolver.acme.email=<%= @config['ssl']['email'] %>"
+      - "--certificatesresolvers.myresolver.acme.storage=/acme.json"
+      <%- end -%>
