--- a/templates/compose/superset.yaml.erb
+++ b/templates/compose/superset.yaml.erb
@@ -7,10 +7,14 @@ services:
     volumes:
       - superset_db:/var/lib/superset
     labels:
-      - "traefik.http.routers.superset.rule=Host(`superset.<%= @config['app']['domain'] %>`)"
-      - "traefik.http.services.superset.loqadbalancer.server.port=8088"
-      - "traefik.http.routers.superset.entrypoints=web"
+      - "traefik.http.routers.superset-<%= @name %>.rule=Host(`superset.<%= @config['app']['domain'] %>`)"
+      - "traefik.http.services.superset.loadbalancer.server.port=8088"
       - "traefik.enable=true"
+      <%- if @config['ssl']['enabled'] -%>
+      - "traefik.http.routers.superset-<%= @name %>.entrypoints=websecure"
+      <%- else -%>
+      - "traefik.http.routers.superset-<%= @name %>.entrypoints=web"
+      <%- end -%>
 
 volumes:
   superset_db:
