--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -13,9 +13,12 @@ DATABASE_PORT=<%= @config['database']['port'] %>
 DATABASE_USER=<%= @config['database']['user'] %>
 DATABASE_PASS=<%= @config['database']['password'] %>
 
+<%- if @config['twilio']['enabled'] -%>
+BARONG_PHONE_VERIFICATION=twilio_sms
 BARONG_TWILIO_PHONE_NUMBER=<%= @config['twilio']['phone_number'] %>
 BARONG_TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
 BARONG_TWILIO_AUTH_TOKEN=<%= @config['twilio']['auth_token'] %>
+<%- end -%>
 
 BARONG_STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
 BARONG_STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
