Fix: finex configuration

--- a/templates/config/finex/config.yaml.erb
+++ b/templates/config/finex/config.yaml.erb
@@ -27,9 +27,17 @@ messaging:
   queues:
     - name:    finex.gateway
     - name:    finex.events.processor
+  orderbook:
+    max_publish_size: 300
 gateway:
   rate:
     maker:
+      - limit: 500
+        period: 10s
+    admin:
+      - limit: 500
+        period: 10s
+    superadmin:
       - limit: 500
         period: 10s
     bench:
@@ -46,13 +54,22 @@ api:
     maker:
       limit: 500
       period: 10s
-    default:
+    admin:
       limit: 500
       period: 10s
+    superadmin:
+      limit: 500
+      period: 10s
+    default:
+      limit: 5
+      period: 1s
   actions:
     trade:
       min_level: 2
-      roles: [member, broker, trader, maker]
+      roles: [member, broker, trader, maker, admin, superadmin]
     bulk_api:
       min_level: 3
-      roles: [maker]
+      roles: [maker, admin, superadmin]
+    admin:
+      min_level: 3
+      roles: [admin, superadmin]
