--- a/templates/compose/backend.yaml.erb
+++ b/templates/compose/backend.yaml.erb
@@ -34,6 +34,8 @@ services:
   redis:
     image: redis:4.0.10
     restart: always
+    ports:
+      - "127.0.0.1:6379:6379"
     volumes:
       - redis_data:/data
 
