--- a/templates/config/barong/seeds.yml.erb
+++ b/templates/config/barong/seeds.yml.erb
@@ -64,6 +64,7 @@ permissions:
  # we are watching after you 0_0
  - { role: admin, verb: all, path: admin, action: audit }
  - { role: admin, verb: all, path: api/v2, action: audit }
+ - { role: admin, verb: all, path: api/v2/sonic/, action: accept }
 
 # ACCOUNTANT
  # accountant has a read access to the peatio admin api
