--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -1,91 +1,2 @@
-PORT=8001
-
-LOG_LEVEL=warn
-
-DISABLE_SPRING=true
-
-RAILS_ENV=production
-
-SECRET_KEY_BASE=64
-
-<%- if @config['database']['adapter'] == 'postgresql' %>
-DATABASE_COLLATION=""
-DATABASE_ADAPTER="postgresql"
-<%- elsif @config['database']['adapter'] == 'mysql' %>
-DATABASE_ADAPTER="mysql2"
-<%- end %>
-DATABASE_HOST=<%= @config['database']['host'] %>
-DATABASE_PORT=<%= @config['database']['port'] %>
-DATABASE_USER=<%= @config['database']['user'] %>
-DATABASE_PASS=<%= @config['database']['password'] %>
-
-<%- if @config['twilio']['enabled'] -%>
-BARONG_PHONE_VERIFICATION=twilio_sms
-BARONG_TWILIO_PHONE_NUMBER=<%= @config['twilio']['phone_number'] %>
-BARONG_TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
-BARONG_TWILIO_AUTH_TOKEN=<%= @config['twilio']['auth_token'] %>
-<%- end -%>
-
-BARONG_KYC_PROVIDER=<%= @config['kyc']['provider'] %>
-
-<%- if @config['kyc']['provider'] == 'kycaid' -%>
-BARONG_KYCAID_AUTHORIZATION_TOKEN=<%= @config['kyc']['authorization_token'] %>
-BARONG_KYCAID_SANDBOX_MODE=<%= @config['kyc']['sandbox_mode'] %>
-BARONG_KYCAID_API_ENDPOINT=<%= @config['kyc']['api_endpoint'] %>
-<%- end -%>
-
-BARONG_STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
-BARONG_STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
-BARONG_STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
-BARONG_STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
-BARONG_STORAGE_ENDPOINT=<%= @config['storage']['endpoint'] %>
-BARONG_STORAGE_SIGNATURE_VERSION=<%= @config['storage']['signatureVersion'] %>
-BARONG_STORAGE_REGION=<%= @config['storage']['region'] %>
-
-BARONG_CAPTCHA=<%= @config['captcha']['type'] %>
-<% if @config['captcha']['type'] == 'recaptcha' %>
-BARONG_RECAPTCHA_SITE_KEY=<%= @config['captcha']['siteKey'] %>
-BARONG_RECAPTCHA_SECRET_KEY=<%= @config['captcha']['secretKey'] %>
-<% elsif @config['captcha']['type'] == 'geetest' %>
-BARONG_GEETEST_ID=<%= @config['captcha']['siteKey'] %>
-BARONG_GEETEST_KEY=<%= @config['captcha']['secretKey'] %>
-<% end %>
-
-JWT_PUBLIC_KEY=<%= @barong_public_key %>
-JWT_PRIVATE_KEY_PATH=/secrets/barong.key
-
-BARONG_VAULT_TOKEN=<%= @config['vault']['barong_token'] %>
-BARONG_VAULT_ADDRESS=http://vault:8200
-BARONG_VAULT_APP_NAME=<%= @config['app']['name'].downcase %>
-
-REDIS_URL=redis://redis:6379
-BARONG_REDIS_URL=redis://redis:6379
-
-BARONG_EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
-BARONG_EVENT_API_JWT_ALGORITHM=RS256
-BARONG_EVENT_API_RABBITMQ_HOST=rabbitmq
-BARONG_EVENT_API_RABBITMQ_PORT=5672
-BARONG_EVENT_API_RABBITMQ_USERNAME=guest
-BARONG_EVENT_API_RABBITMQ_PASSWORD=guest
-
-BARONG_SMTP_HOST=<%= @config['smtp']['host'] %>
-BARONG_SMTP_PORT=<%= @config['smtp']['port'] %>
-BARONG_SMTP_USER=<%= @config['smtp']['user'] %>
-BARONG_SMTP_PASSWORD=<%= @config['smtp']['password'] %>
-BARONG_SMTP_LOGO_LINK=<%= @config['smtp']['sender_logo'] %>
-BARONG_DEFAULT_LANGUAGE=en
-
-BARONG_SENDER_NAME=<%= @config['smtp']['sender_name'] %>
-BARONG_SENDER_EMAIL=<%= @config['smtp']['sender_email'] %>
-
-BARONG_KYCAID_AUTHORIZATION_TOKEN=<%= @config['kyc']['authorization_token'] %>
-BARONG_KYCAID_SANDBOX_MODE=<%= @config['kyc']['sandbox_mode'] %>
-BARONG_KYCAID_API_ENDPOINT=<%= @config['kyc']['api_endpoint'] %>
-
-BARONG_PASSWORD_MIN_ENTROPY=14
-BARONG_PASSWORD_USE_DICTIONARY=false
-
-BARONG_CSRF_PROTECTION=<%= @config['csrfEnabled'] %>
-
-BARONG_APP_NAME=<%= @config['app']['name'] %>
-BARONG_DOMAIN=<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
+KAIGARA_APP_NAME=barong
+KAIGARA_SCOPES=private,secret
