--- a/templates/config/kaigara.env.erb
+++ b/templates/config/kaigara.env.erb
@@ -1,5 +1,4 @@
-KAIGARA_VAULT_ADDR=http://vault:8200
 KAIGARA_VAULT_TOKEN=<%= @config['vault']['token'] %>
+KAIGARA_VAULT_ADDR=http://vault:8200
 KAIGARA_DEPLOYMENT_ID=<%= @config['app']['name'].downcase %>
-KAIGARA_APP_NAME=peatio
-KAIGARA_SCOPES=private,secret
+KAIGARA_REDIS_URL=redis://redis:6379
