--- a/templates/config/frontend/tower.js.erb
+++ b/templates/config/frontend/tower.js.erb
@@ -2,9 +2,11 @@ window.env = {
     applogicUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/applogic',
     authUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/barong',
     peatioUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/peatio',
+    finexUrl:  '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/finex',
     msAlertDisplayTime: '5000',
     tablePageLimit: 50,
     minutesUntilAutoLogout: '35',
+    finex: <%= config['finex']['enabled'] %>,
     captcha: {
         captchaType: '<%= @config['captcha']['type'] %>',
         siteKey: '<%= @config['captcha']['siteKey'] %>',
