Update mysql password

--- a/templates/compose/backend.yaml.erb
+++ b/templates/compose/backend.yaml.erb
@@ -8,7 +8,7 @@ services:
       - db_data:/var/lib/mysql
       - ../config/mysql:/etc/mysql/conf.d
     environment:
-      MYSQL_ROOT_PASSWORD: changeme
+      MYSQL_ROOT_PASSWORD: <%= @config['database']['password'] %>
 
   influxdb:
     image: influxdb:1.7.10
