Enhancement: Add --no-persistent-txqueue to Parity to avoid tx culling

--- a/templates/compose/cryptonodes.yaml.erb
+++ b/templates/compose/cryptonodes.yaml.erb
@@ -17,6 +17,7 @@ services:
       --jsonrpc-hosts=all
       --jsonrpc-apis=all
       --db-compaction=ssd
+      --no-persistent-txqueue
     volumes:
       - ../data/parity:/home/parity/.local/share/io.parity.ethereum
     ports:
