--- a/templates/compose/cryptonodes.yaml.erb
+++ b/templates/compose/cryptonodes.yaml.erb
@@ -2,7 +2,7 @@ version: '3.6'
 
 services:
   parity:
-    image: parity/parity:v2.5.13-stable
+    image: parity/parity:v2.7.2-stable
     restart: always
     command: |
       --chain=kovan
@@ -17,14 +17,17 @@ services:
       --jsonrpc-hosts=all
       --jsonrpc-apis=all
       --db-compaction=ssd
+      --no-persistent-txqueue
     volumes:
       - ../data/parity:/home/parity/.local/share/io.parity.ethereum
     ports:
       - "127.0.0.1:8545:8545"
 
   bitcoind:
-    image: quay.io/openware/bitcoind:0.17.1
+    image: quay.io/openware/bitcoind:0.19.1
     restart: always
+    user: root
+    command: bitcoind
     volumes:
       - ../data/bitcoin:/bitcoin
       - ../config/bitcoin.conf:/bitcoin/.bitcoin/bitcoin.conf
