Feature: email template logo can be configurated in app.yml

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -56,6 +56,7 @@ BARONG_SMTP_HOST=<%= @config['smtp']['host'] %>
 BARONG_SMTP_PORT=<%= @config['smtp']['port'] %>
 BARONG_SMTP_USER=<%= @config['smtp']['user'] %>
 BARONG_SMTP_PASSWORD=<%= @config['smtp']['password'] %>
+BARONG_SMTP_LOGO_LINK=<%= @config['smtp']['sender_logo'] %>
 BARONG_DEFAULT_LANGUAGE=en
 
 BARONG_SENDER_NAME=<%= @config['smtp']['sender_name'] %>
