--- a/templates/compose/backend.yaml.erb
+++ b/templates/compose/backend.yaml.erb
@@ -5,7 +5,7 @@ services:
     restart: always
     image: mysql:5.7
     volumes:
-      - db_data:/var/lib/mysql
+      - <%= @config['database']['volumePath'] -%>:/var/lib/mysql
       - ../config/mysql:/etc/mysql/conf.d
     environment:
       MYSQL_ROOT_PASSWORD: changeme
@@ -55,7 +55,6 @@ services:
       VAULT_ADDR: http://vault:8200
 
 volumes:
-  db_data:
   rabbitmq_data:
   redis_data:
   vault_data:
