Feature: Rango integration to replace Ranger

--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -49,12 +49,11 @@ services:
     << : *peatio-daemon
     command: bash -c "bin/link_config && bundle exec ruby lib/daemons/amqp_daemon.rb influx_writer"
 
-  ranger:
+  rango:
     restart: always
-    image: "<%= @config['images']['peatio'] %>"
+    image: "<%= @config['images']['rango'] %>"
     env_file:
-      - ../config/ranger.env
-    command: bash -c "bundle exec peatio service start ranger"
+      - ../config/rango.env
 
 <% unless @config['finex']['enabled'] %>
   matching:
