Enhancement: update to the latest 2.6 versions

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -62,6 +62,10 @@ BARONG_DEFAULT_LANGUAGE=en
 BARONG_SENDER_NAME=<%= @config['smtp']['sender_name'] %>
 BARONG_SENDER_EMAIL=<%= @config['smtp']['sender_email'] %>
 
+BARONG_KYCAID_AUTHORIZATION_TOKEN=<%= @config['kyc']['authorization_token'] %>
+BARONG_KYCAID_SANDBOX_MODE=<%= @config['kyc']['sandbox_mode'] %>
+BARONG_KYCAID_API_ENDPOINT=<%= @config['kyc']['api_endpoint'] %>
+
 BARONG_PASSWORD_MIN_ENTROPY=14
 BARONG_PASSWORD_USE_DICTIONARY=false
 
