--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -24,4 +24,11 @@ window.env = {
     sessionCheckInterval: '15000',
     balancesFetchInterval: '3000',
     passwordEntropyStep: 14,
+    kycSteps: [
+      'email',
+      'phone',
+      'profile',
+      'document',
+      'address',
+    ],
 };
