Enhancement: update configs for 2.6 versions

--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -78,13 +78,16 @@ services:
 
   sidekiq:
     restart: always
-    image: "<%= @config['images']['applogic'] %>"
+    image: "<%= @config['images']['barong'] %>"
     env_file:
-      - ../config/applogic.env
+      - ../config/barong.env
     volumes:
-      - ../config/applogic/management_api_v2.yml:/home/app/config/management_api_v2.yml
-      - ../config/applogic/schedule.yml:/home/app/config/schedule.yml
-    command: bash -c "sidekiq"
+      - ../config/secrets:/secrets:ro
+      - ../config/barong/seeds.yml:/home/app/config/seeds.yml
+      - ../config/barong/barong.yml:/home/app/config/barong.yml
+      - ../config/barong/authz_rules.yml:/home/app/config/authz_rules.yml
+      - ../config/barong/management_api.yml:/home/app/config/management_api.yml
+    command: bash -c "bundle exec sidekiq"
 
   listener:
     restart: always
