--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -43,6 +43,7 @@ JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 BARONG_VAULT_TOKEN=<%= @config['vault']['token'] %>
 BARONG_VAULT_ADDRESS=http://vault:8200
 
+REDIS_URL=redis://redis:6379
 BARONG_REDIS_URL=redis://redis:6379
 
 BARONG_EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
