Enhencment: add KYCaid integration steps to README

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -20,9 +20,9 @@ BARONG_TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
 BARONG_TWILIO_AUTH_TOKEN=<%= @config['twilio']['auth_token'] %>
 <%- end -%>
 
-BARONG_KYC_PROVIDER=<%= @config['kyc']['type'] %>
+BARONG_KYC_PROVIDER=<%= @config['kyc']['provider'] %>
 
-<%- if @config['kyc']['type'] == 'kycaid' -%>
+<%- if @config['kyc']['provider'] == 'kycaid' -%>
 BARONG_KYCAID_AUTHORIZATION_TOKEN=<%= @config['kyc']['authorization_token'] %>
 BARONG_KYCAID_SANDBOX_MODE=<%= @config['kyc']['sandbox_mode'] %>
 BARONG_KYCAID_API_ENDPOINT=<%= @config['kyc']['api_endpoint'] %>
