Fix typo in upstream config

--- a/templates/config/peatio/seed/markets.yml.erb
+++ b/templates/config/peatio/seed/markets.yml.erb
@@ -13,6 +13,6 @@
   data: { "upstream": {
                         "driver": "opendax",
                         "target": "ethusd",
-                        "rest": "https:///www.opendax.io/api/v2/peatio/",
+                        "rest": "https://www.opendax.io/api/v2/peatio/",
                         "websocket": "wss://www.opendax.io/api/v2/ranger/public/"
                       } }
