Feature: Update KYC configs for 2.5 (#206)
Co-authored-by: Valentine Shatravenko <vshatravenko@heliostech.fr>

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -20,6 +20,14 @@ BARONG_TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
 BARONG_TWILIO_AUTH_TOKEN=<%= @config['twilio']['auth_token'] %>
 <%- end -%>
 
+BARONG_KYC_PROVIDER=<%= @config['kyc']['provider'] %>
+
+<%- if @config['kyc']['provider'] == 'kycaid' -%>
+BARONG_KYCAID_AUTHORIZATION_TOKEN=<%= @config['kyc']['authorization_token'] %>
+BARONG_KYCAID_SANDBOX_MODE=<%= @config['kyc']['sandbox_mode'] %>
+BARONG_KYCAID_API_ENDPOINT=<%= @config['kyc']['api_endpoint'] %>
+<%- end -%>
+
 BARONG_STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
 BARONG_STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
 BARONG_STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
@@ -43,6 +51,7 @@ JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 BARONG_VAULT_TOKEN=<%= @config['vault']['token'] %>
 BARONG_VAULT_ADDRESS=http://vault:8200
 
+REDIS_URL=redis://redis:6379
 BARONG_REDIS_URL=redis://redis:6379
 
 BARONG_EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
