--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -15,6 +15,7 @@ DATABASE_PASS=<%= @config['database']['password'] %>
 
 VAULT_URL=http://vault:8200
 VAULT_TOKEN=<%= @config['vault']['token'] %>
+VAULT_APP_NAME=<%= @config['app']['name'].downcase %>
 
 REDIS_URL=redis://redis:6379
 
