Enhancement: Add VAULT_APP_NAME to Peatio and Barong configs

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -42,6 +42,7 @@ JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 
 BARONG_VAULT_TOKEN=<%= @config['vault']['token'] %>
 BARONG_VAULT_ADDRESS=http://vault:8200
+BARONG_VAULT_APP_NAME=<%= @config['app']['name'].downcase %>
 
 REDIS_URL=redis://redis:6379
 BARONG_REDIS_URL=redis://redis:6379
